Fixed whitespacing issues.

--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
-.contact
-{
+.contact {
   text-align: right;
   padding: 2.5em;
 }
+
 .contact span {
   margin-left: 3em;
 }
